# MTX_Dynamic_Focus_Ambient_Music

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: paper-sync.mdc
config/: default.yaml
godot/: README.md  project.godot
godot/scenes/: main.tscn
godot/scripts/: soundscape_manager.gd
paper/: README.md  main.aux  main.bcf  main.blg  main.out  main.tex  main.toc  ref.bib
scripts/: diag_audio.py  diag_qt_audio.py  generate_audio_assets.py  generate_pad_assets.py  verify_imports.py
src/adaptive_soundscape/: __init__.py  __main__.py  app.py
src/adaptive_soundscape.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/adaptive_soundscape/activity/: __init__.py  input_tracker.py  metrics.py  monitor.py  window_tracker.py
src/adaptive_soundscape/audio/: asset_generator.py  backend.py  factory.py  godot_backend.py  layers.py  loader.py  parameters.py  placeholder_mixer.py  profiles.py
src/adaptive_soundscape/cognitive/: __init__.py  estimator.py  signals.py
src/adaptive_soundscape/context/: __init__.py  classifier.py  persistence.py  rules.py
src/adaptive_soundscape/core/: bus.py  config.py  events.py
src/adaptive_soundscape/transition/: controller.py
src/adaptive_soundscape/ui/: main_window.py  tray.py  widgets.py
tests/: test_asset_generator.py  test_audio_factory.py  test_audio_loader.py  test_context_rules.py  test_focus_estimator.py  test_privacy_metadata.py  test_transition_hysteresis.py
