[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-soundscape"
version = "0.1.0"
description = "Adaptive Cognitive Soundscape MVP — context-aware focus music"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "pywin32>=306",
    "pynput>=1.7",
    "psutil>=5.9",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "miniaudio>=1.61",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
adaptive-soundscape = "adaptive_soundscape.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
